# admin-rs

./: .env  .gitignore  Cargo.toml  README.MD  docker-compose.yml  env-example  meu_banco.db  migrate.bat  my_database.db  package.json  tailwind.config.js  todo.md
features/: RM 001.md
migrations/: 0001_cidade.sql  0001_create_produto.sql  0002_contato.sql  0004_cidade.sql  0004_compras.sql  0005_users.sql  0006_empresa.sql  0006_usuarios.sql  0007_tenant.sql  0009_pessoa.sql  0010_subscriber.sql  0011_pedido.sql  0012_empresa.sql  0013_email.sql  0014_produto.sql  0015_permissao.sql  0016_icones.sql  0017_menus.sql  0018_dashboard.sql  0019_variacao_produto.sql  0020_bi.sql  0021_pagamento.sql  0022_veiculo.sql  0023_auditoria.sql  0024_tipo_pedido.sql  0025_recado.sql  0026_grupo_empresa.sql  0027_job.sql  0028_primeiro_acesso.sql  0029_normal_endereco.sql  0030_endereco.sql  0031_unique_nome.sql  20241028001956_login.sql  20241028001956_usuarios.sql  20241028002533_cidade.sql  20241028002533_city.sql  20241028002534_cliente.sql  20241028002534_contact.sql  20241028002536_order.sql  20241028002536_pedido.sql  (+18 more)
requisitos/: RM 001.md
resources/css/: style.css
resources/js/: ajaxMessage.js  chartExample.js  form.js  mask.js  modal.js  tooglePassword.js
shared/css/: style.css  tailwind.css
shared/js/: ajaxMessage.js  ajaxToast.js  form.js  tooglePassword.js
shared/views/: ajaxError.html
sql/: menus_usuario.sql  next_uuid_v4.md  next_uuid_v7.md  produto.sql
src/: app.rs  main.rs  main_BACKUP.rs  openapi.rs
src/_hexagon/: mod.rs  model.rs  repo.rs  service.rs  view.rs
src/aapp/: domain.rs  mod.rs
static/: manifest.json
typings/: data-type.d.ts
www/: listview.jsx  login.jsx
(+340 files in other folders)
