[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# resolver = "2"

# members = [
#  "api",
#   "web"
# ]


[dependencies]
# chrono = { version = "0.4.31", features = ["serde"] }
time = { version = "0.3.28", features = ["serde", "parsing", "formatting", "local-offset"] }
derive_more = "0.99.17"
md5 = "0.7.0"

actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-cors = "0.6"

reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.7.2", features = ["macros", "runtime-tokio-rustls", "postgres", "time", "rust_decimal"] }
rust_decimal = { version = "1.36.0", dfeatures = ["db-postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["v4", "v7", "serde"] }
minijinja = { version = "2.0.3", features = ["loader", "builtins"] }
minijinja-contrib = { version = "2.0.3" }
once_cell = "1.19.0"
passwords = "3.1.16"
env_logger = "0.11.5"
url = "2.5.2"
log = "0.4.22"
thiserror = "1.0.63"
serde_with = "3.9.0"
lettre = {version = "0.11.7", features = ["smtp-transport"] }
secrecy = "0.8.0"

utoipa = { version="3.3.0", features = ["actix_extras", "time"] } 
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
utoipa-gen = "4.3.0"
unicode-normalization = "0.1.24"
unicode_categories = "0.1.1"
